force-app/main/default/objects/Intake__c/fields/Time_in_Referred_Out__c.field-meta.xml
<CustomField>
    <fullName>Time_in_Referred_Out__c</fullName>
    <formula>IF(
  NOT(ISBLANK(Referred_Out_Entered_At__c)),
  IF(
    NOT(ISBLANK(Converted_Entered_At__c)),
    Converted_Entered_At__c - Referred_Out_Entered_At__c,
    NOW() - Referred_Out_Entered_At__c
  ),
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time in Referred Out (Days)</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>