force-app/main/default/objects/Intake__c/fields/Time_in_Retainer_Sent__c.field-meta.xml
<CustomField>
    <fullName>Time_in_Retainer_Sent__c</fullName>
    <formula>IF(
  NOT(ISBLANK(Retainer_Agreement_Sent_Entered_At__c)),
  IF(
    NOT(ISBLANK(Retainer_Agreement_Signed_Entered_At__c)),
    Retainer_Agreement_Signed_Entered_At__c - Retainer_Agreement_Sent_Entered_At__c,
    IF(
      NOT(ISBLANK(Turned_Down_Entered_At__c)),
      Turned_Down_Entered_At__c - Retainer_Agreement_Sent_Entered_At__c,
      IF(
        NOT(ISBLANK(Referred_Out_Entered_At__c)),
        Referred_Out_Entered_At__c - Retainer_Agreement_Sent_Entered_At__c,
        IF(
          NOT(ISBLANK(Converted_Entered_At__c)),
          Converted_Entered_At__c - Retainer_Agreement_Sent_Entered_At__c,
          IF(
            ISPICKVAL(Status__c, &quot;Retainer Agreement Sent&quot;),
            NOW() - Retainer_Agreement_Sent_Entered_At__c,
            NULL
          )
        )
      )
    )
  ),
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time in Retainer Sent (Days)</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>