force-app/main/default/objects/Intake__c/fields/Time_in_Retainer_Signed__c.field-meta.xml
<CustomField>
    <fullName>Time_in_Retainer_Signed__c</fullName>
    <formula>IF(
  NOT(ISBLANK(Retainer_Agreement_Signed_Entered_At__c)),
  IF(
    NOT(ISBLANK(Turned_Down_Entered_At__c)),
    Turned_Down_Entered_At__c - Retainer_Agreement_Signed_Entered_At__c,
    IF(
      NOT(ISBLANK(Referred_Out_Entered_At__c)),
      Referred_Out_Entered_At__c - Retainer_Agreement_Signed_Entered_At__c,
      IF(
        NOT(ISBLANK(Converted_Entered_At__c)),
        Converted_Entered_At__c - Retainer_Agreement_Signed_Entered_At__c,
        NOW() - Retainer_Agreement_Signed_Entered_At__c
      )
    )
  ),
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time in Retainer Signed (Days)</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>