force-app/main/default/objects/Intake__c/fields/Time_in_Turned_Down__c.field-meta.xml
<CustomField>
    <fullName>Time_in_Turned_Down__c</fullName>
    <formula>IF(
  NOT(ISBLANK(Turned_Down_Entered_At__c)),
  IF(
    NOT(ISBLANK(Referred_Out_Entered_At__c)),
    Referred_Out_Entered_At__c - Turned_Down_Entered_At__c,
    IF(
      NOT(ISBLANK(Converted_Entered_At__c)),
      Converted_Entered_At__c - Turned_Down_Entered_At__c,
      NOW() - Turned_Down_Entered_At__c
    )
  ),
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time in Turned Down (Days)</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>