force-app/main/default/objects/Intake__c/fields/Total_Emails__c.field-meta.xml
<CustomField>
    <fullName>Total_Emails__c</fullName>
    <label>Total Emails</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>