force-app/main/default/objects/Intake__c/fields/Transported_by_Ambulance__c.field-meta.xml
<CustomField>
    <fullName>Transported_by_Ambulance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transported by Ambulance</label>
    <type>Checkbox</type>
</CustomField>