force-app/main/default/objects/Intake__c/fields/Triage_Score__c.field-meta.xml
<CustomField>
    <fullName>Triage_Score__c</fullName>
    <label>Triage_Score</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>