force-app/main/default/objects/Intake__c/fields/Triage_Signals__c.field-meta.xml
<CustomField>
    <fullName>Triage_Signals__c</fullName>
    <label>Triage Signals</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>