force-app/main/default/objects/Intake__c/fields/Turn_Down_Details__c.field-meta.xml
<CustomField>
    <fullName>Turn_Down_Details__c</fullName>
    <label>Turn Down Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>