force-app/main/default/objects/Intake__c/fields/Turn_Down_Reason__c.field-meta.xml
<CustomField>
    <fullName>Turn_Down_Reason__c</fullName>
    <label>Turn Down Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SOL passed</fullName>
            </value>
            <value>
                <fullName>No liability</fullName>
            </value>
            <value>
                <fullName>No injury</fullName>
            </value>
            <value>
                <fullName>Conflict</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>