force-app/main/default/objects/Intake__c/fields/Turned_Down_Entered_At__c.field-meta.xml
<CustomField>
    <fullName>Turned_Down_Entered_At__c</fullName>
    <label>Turned Down Entered At</label>
    <type>DateTime</type>
</CustomField>