force-app/main/default/objects/Intake__c/fields/Under_Review_Entered_At__c.field-meta.xml
<CustomField>
    <fullName>Under_Review_Entered_At__c</fullName>
    <label>Under Review Entered At</label>
    <type>DateTime</type>
</CustomField>