force-app/main/default/objects/Intake__c/fields/Video_Available__c.field-meta.xml
<CustomField>
    <fullName>Video_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Video Available</label>
    <type>Checkbox</type>
</CustomField>