force-app/main/default/objects/Intake__c/fields/Was_Injured__c.field-meta.xml
<CustomField>
    <fullName>Was_Injured__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Was Injured</label>
    <type>Checkbox</type>
</CustomField>