force-app/main/default/objects/Intake__c/fields/Weather_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Weather_Conditions__c</fullName>
    <label>Weather Conditions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clear</fullName>
            </value>
            <value>
                <fullName>Rain</fullName>
            </value>
            <value>
                <fullName>Snow</fullName>
            </value>
            <value>
                <fullName>Ice</fullName>
            </value>
            <value>
                <fullName>Fog</fullName>
            </value>
            <value>
                <fullName>Wind</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>