force-app/main/default/objects/Intake__c/fields/Weekend__c.field-meta.xml
<CustomField>
    <fullName>Weekend__c</fullName>
    <formula>OR(
    WEEKDAY(DATEVALUE(CreatedDate)) = 1,
    WEEKDAY(DATEVALUE(CreatedDate)) = 7
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weekend</label>
    <type>Checkbox</type>
</CustomField>