force-app/main/default/objects/Intake__c/fields/Witness_Count__c.field-meta.xml
<CustomField>
    <fullName>Witness_Count__c</fullName>
    <label>Witness Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>