force-app/main/default/objects/Intake__c/fields/Witnesses_Present__c.field-meta.xml
<CustomField>
    <fullName>Witnesses_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Witnesses Present</label>
    <type>Checkbox</type>
</CustomField>