force-app/main/default/objects/Intake__c/fields/Working_Entered_At__c.field-meta.xml
<CustomField>
    <fullName>Working_Entered_At__c</fullName>
    <label>Working Entered At</label>
    <type>DateTime</type>
</CustomField>