force-app/main/default/objects/Intake__c/recordTypes/Active_Intake.recordType-meta.xml
<RecordType>
    <fullName>Active_Intake</fullName>
    <active>true</active>
    <label>Active Intake</label>
</RecordType>