force-app/main/default/objects/Intake__c/recordTypes/Converted_Intake.recordType-meta.xml
<RecordType>
    <fullName>Converted_Intake</fullName>
    <active>true</active>
    <label>Converted Intake</label>
</RecordType>