force-app/main/default/objects/Intake__c/recordTypes/New_Intake.recordType-meta.xml
<RecordType>
    <fullName>New_Intake</fullName>
    <active>true</active>
    <description>Newly created Intake</description>
    <label>New Intake</label>
</RecordType>