force-app/main/default/objects/Intake__c/validationRules/Qualification_Score_Max_100.validationRule-meta.xml
<ValidationRule>
    <fullName>Qualification_Score_Max_100</fullName>
    <active>true</active>
    <errorConditionFormula>Qualification_Score__c &gt; 100 || Qualification_Score__c &lt; 0</errorConditionFormula>
    <errorMessage>Qualification Score cannot be greater than 100.</errorMessage>
</ValidationRule>