force-app/main/default/objects/Intake__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Intake_Title__c</columns>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>Incident_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Case_Quality_Display__c</columns>
    <columns>Source__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>