force-app/main/default/objects/Intake__c/listViews/Converted_Intake.listView-meta.xml
<ListView>
    <fullName>Converted_Intake</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Converted</value>
    </filters>
    <label>Converted Intakes</label>
</ListView>