force-app/main/default/objects/Intake__c/listViews/General_Injury_Intake_Queue_Intake.listView-meta.xml
<ListView>
    <fullName>General_Injury_Intake_Queue_Intake</fullName>
    <filterScope>Queue</filterScope>
    <label>General Injury Intake Queue</label>
    <queue>General_Injury_Intake_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>