force-app/main/default/objects/Intake__c/listViews/Immediate_Response_Queue_Intake.listView-meta.xml
<ListView>
    <fullName>Immediate_Response_Queue_Intake</fullName>
    <filterScope>Queue</filterScope>
    <label>Immediate Response Queue</label>
    <queue>Immediate_Response_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>