force-app/main/default/objects/Intake__c/listViews/Investigation_Queue_Intake.listView-meta.xml
<ListView>
    <fullName>Investigation_Queue_Intake</fullName>
    <filterScope>Queue</filterScope>
    <label>Investigation Queue</label>
    <queue>Investigation_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>