force-app/main/default/objects/Intake__c/listViews/MVA_Priority_Queue_Intake.listView-meta.xml
<ListView>
    <fullName>MVA_Priority_Queue_Intake</fullName>
    <filterScope>Queue</filterScope>
    <label>MVA Priority Queue</label>
    <queue>MVA_Priority_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>