force-app/main/default/objects/Intake__c/listViews/New_Active_Intake_This_Week.listView-meta.xml
<ListView>
    <fullName>New_Active_Intake_This_Week</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Intake__c.Active_Intake</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>New Active Intake - This Week</label>
</ListView>