force-app/main/default/objects/Intake__c/listViews/Open_Intake.listView-meta.xml
<ListView>
    <fullName>Open_Intake</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>Open Intakes</label>
</ListView>