force-app/main/default/objects/Intake__c/listViews/Qualified_Intakes.listView-meta.xml
<ListView>
    <fullName>Qualified_Intakes</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Qualified</value>
    </filters>
    <label>Qualified Intakes</label>
</ListView>