force-app/main/default/objects/Intake__c/listViews/Reffered_Out_Intake.listView-meta.xml
<ListView>
    <fullName>Reffered_Out_Intake</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Referred Out</value>
    </filters>
    <label>Referred Out Intakes</label>
</ListView>