force-app/main/default/objects/Intake__c/listViews/Turn_Down_Intake.listView-meta.xml
<ListView>
    <fullName>Turn_Down_Intake</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Turned Down</value>
    </filters>
    <label>Turn Down Intakes</label>
</ListView>