force-app/main/default/objects/Intake__c/listViews/Under_Review_Intake.listView-meta.xml
<ListView>
    <fullName>Under_Review_Intake</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Under Review</value>
    </filters>
    <label>Under Review Intakes</label>
</ListView>