force-app/main/default/objects/Intake__c/listViews/Working_Intake.listView-meta.xml
<ListView>
    <fullName>Working_Intake</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Working</value>
    </filters>
    <label>Working Intakes</label>
</ListView>